--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,9 @@
   -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.75); }
-
+.navbar-brand{
+    padding-left: 100px;
+}
 .active {
   background-color: #718093;
   color: #192a56;
@@ -66,6 +68,7 @@ footer {
   margin-bottom: 0px;
   clear: both;
   margin-top: 20px;
+  text-align: center;
 }
 
 .btn-agregar {
@@ -171,6 +174,37 @@ footer {
 #nota{
     height: 80px;
 }
+
+@media screen and (max-width: 700px){
+    footer{
+        width: 100%;
+        height:50px;
+    } 
+}
+@media screen and (max-width: 600px){
+    footer{
+        width: 100%;
+        height:50px;
+    } 
+}
+@media screen and (max-width: 500px){
+    footer{
+        width: 100%;
+        height:50px;
+    } 
+}
+@media screen and (max-width: 400px){
+    footer{
+        width: 100%;
+        height:50px;
+    } 
+}
+
+@media screen and (max-width: 300px){
+    footer{
+        width: 100%;
+        height:50px;
+    } 
 
 
 /*# sourceMappingURL=styles.css.map */
