--- a/public/css/login_style.css
+++ b/public/css/login_style.css
@@ -5,7 +5,8 @@
 body{
     margin: 0;
     min-height: 100vh;
-    background:url(../images/fondo-azul-jpg.jpg);
+    /*background:url(../images/fondo-azul-jpg.jpg);*/
+    background:url(../images/computer.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
